--- a/SpeechToText.html
+++ b/SpeechToText.html
@@ -21,14 +21,15 @@
 </label>
 <button type="button" onclick="StartListening()">Start</button>
 <br></br>     
-  <textarea id="SpeechArea" rows="20" cols="100" style="border: none; font-size: 120% ;
+  <textarea id="SpeechArea" rows="40" cols="80" style="border: none; font-size: 100% ;
   font-family:Arial, Helvetica, sans-serif;"></textarea>  
   <br></br>     
 
   <script>
     var CheckCopyClip = document.getElementById("CopyClip");
     CheckCopyClip.checked = true;    
-    
+    //window.addEventListener('keypress',alert('Pruueba'));
+    //window.addEventListener('focus', StartListening);
     function StartListening(){
 
     window.SpeechRecognition = window.webkitSpeechRecognition || window.SpeechRecognition;
