--- a/SpeechToText.html
+++ b/SpeechToText.html
@@ -19,7 +19,7 @@
     <option value="fr-FR">French</option>
   </select>
 </label>
-<button type="button" onclick="StartListening()">Start</button>
+<button type="button" onclick="StartListening()">Clear/Start Listening</button>
 <br></br>     
   <textarea id="SpeechArea" rows="40" cols="70" style="border: none; font-size: 90% ;
   font-family:Arial, Helvetica, sans-serif;"></textarea>  
