--- a/SpeechToTextAndNav.html
+++ b/SpeechToTextAndNav.html
@@ -20,10 +20,12 @@
     </select>
   </label>
   <button type="button" onclick="StartListening()">Clear/Start Listening</button>
+  <button type="button" onclick="SendTextToNAV()">Send Text to NAV</button>  
   <br></br>
   <textarea id="SpeechArea" rows="40" cols="70" style="border: none; font-size: 90% ;
   font-family:Arial, Helvetica, sans-serif;"></textarea>
   <br></br>
+
   <script>
     var CheckCopyClip = document.getElementById("CopyClip");
     CheckCopyClip.checked = true;
@@ -59,6 +61,9 @@
     }
     function SendString(StringFromNAV = "") {
       alert(StringFromNAV);
+    }
+    function SendTextToNAV(){
+      Microsoft.Dynamics.NAV.InvokeExtensibilityMethod("ReceiveString", [document.getElementById("SpeechArea").value]);
     }
 
   </script>
